--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
     --background-200: #3f3c3f;
     --background-300: #515151;
     --font-base: 14px;
+    --font-lg: 16px;
 }
 
 * {
@@ -116,4 +117,49 @@ body {
     gap: 30px;
     grid-template-columns: 475px 1fr;
     height: 100%;
+}
+
+.btn-scondary {
+    background-color: trans;
+    outline: 2px solid #969696;
+    width: 100px;
+    text-align: center;
+}
+
+.btn-secondary:hover {
+    background-color: var(--primary);
+    outline: none;
+}
+
+.todo-item {
+    padding: 20px;
+    background-color: var(--background-200);
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.todo-item:hover {
+    outline: var(--primary);
+}
+
+h5 {
+    font-size: var(--font-lg);
+}
+
+button {
+    padding: 8px 15px;
+    cursor: pointer;
+    height: 40px;
+    font-size: 14px;
+    background-color: var(--primary);
+    color: white;
+    border: none;
+    border-radius: 100px;
+    display: none;
+    align-items: center;
+    column-gap: 5px;
+}
+
+button:hover {
+    background-color: var(--primary-300);
 }
